# ChangeLog for dev-perl/Spiffy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spiffy/ChangeLog,v 1.36 2014/08/22 18:18:44 axs Exp $

*Spiffy-0.310.0-r1 (22 Aug 2014)

  22 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +Spiffy-0.310.0-r1.ebuild, -Spiffy-0.310.0.ebuild:
  bumped EAPI to 5; committed directly to stable as no other changes present and
  revbump helps stable systems to keep from dieing on perl-5.18 upgrade

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -Spiffy-0.300.0.ebuild:
  Cleanup

  27 Dec 2012; Raúl Porcel <armin76@gentoo.org> Spiffy-0.310.0.ebuild:
  alpha/s390/sh/sparc stable wrt #441252

  13 Dec 2012; Agostino Sarubbo <ago@gentoo.org> Spiffy-0.310.0.ebuild:
  Stable for ia64, wrt bug #441252

  09 Dec 2012; Markus Meier <maekke@gentoo.org> Spiffy-0.310.0.ebuild:
  arm stable, bug #441252

  08 Dec 2012; Jeroen Roovers <jer@gentoo.org> Spiffy-0.310.0.ebuild:
  Stable for HPPA (bug #441252).

  06 Dec 2012; Agostino Sarubbo <ago@gentoo.org> Spiffy-0.310.0.ebuild:
  Stable for ppc, wrt bug #441252

  06 Dec 2012; <ago@gentoo.org> Spiffy-0.310.0.ebuild:
  Stable for x86, wrt bug #441252

  06 Dec 2012; <ago@gentoo.org> Spiffy-0.310.0.ebuild:
  Stable for amd64, wrt bug #441252

*Spiffy-0.310.0 (05 Aug 2012)

  05 Aug 2012; Torsten Veller <tove@gentoo.org> +Spiffy-0.310.0.ebuild,
  metadata.xml:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Spiffy-0.30.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Spiffy-0.300.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Spiffy-0.300.0 (28 Aug 2011)

  28 Aug 2011; Torsten Veller <tove@gentoo.org> +Spiffy-0.300.0.ebuild:
  Change version scheme

  05 Feb 2010; Torsten Veller <tove@gentoo.org> Spiffy-0.30.ebuild:
  Fix LICENSE (#301969). Maintenance
