@@ -2,13 +2,27 @@
 Hash: SHA256
 
 DIST Spiffy-0.31.tar.gz 53320 SHA256 922e02aa62a8a618f91dc185d34fde65ef652dfa35d7a335f2e8de2ffdd2f686 SHA512 8d08a04823c98b34a9c4114b6d60f572e33a716969af65cb6818f75d4be9887ba723a70c268b77f2642e707c80875e31a3fa931d6f0c328cffdad8354cc400ca WHIRLPOOL 6d4d540af547f70feeaac5e44b2f8fe989094e2867b40b14e40e090d673015d97a0be98848878d5d3d02d42ee062dcac1e8a31f9458fa57ac7a85ed2ff9a0ed5
+DIST Spiffy-0.46.tar.gz 33447 SHA256 8f58620a8420255c49b6c43c5ff5802bd25e4f09240c51e5bf2b022833d41da3 SHA512 a1fb02bae4a6edab564c05af2f1b2caaf996d433ec054e07e75a53e88216c46cf14db87a2abdfc9c74f73791267f69129a86bfdaa77492f941104143ca7b8154 WHIRLPOOL 2daf405ad2b84396b96f8df040646b1f75e5bcadd95c4f4ab047c0007433510d18c0f9486603639925c05b3ba8ee689c9e29e873b5705e37b278cdfc55487abd
 EBUILD Spiffy-0.310.0-r1.ebuild 516 SHA256 08207cbe0e5b4aa300d2e6233b8c40787bbe02ee4197c2d05378939433ad7812 SHA512 0bff66503a93c5bd87c6838ec85f8d48abae03d47c6ab3573d485feb5de9c7a2adf3a51b6808e847907d947174ead37b5aaa5ee7322b0aa8dc7248f0a75edbd8 WHIRLPOOL 63b2a9dc4c44b6553d5e3ca4527f84f8894e898a01753bb4736901a346e030d96a1383f84dd6a904f3b1cbd834bec8775310ef3ca01a12a40dca08bc6f81e75e
-MISC ChangeLog 4244 SHA256 093c549374c9a594d03c917ef779fa04cf9663617b74322ae472d3fabfa0033e SHA512 988a81516f2519351bf220dee390a19324bab8dae1cada2bdf6573f8dd52ab45d10aaae98d414efd8279b7bfe5b56572c080e0d371fd94454bb3ce679ea337d0 WHIRLPOOL 847246d76b846663245f19d3a01715aae862e1bcceee552c6c6354f707f60888d8f30abff83ba1b0da96c83ab9704325da33e508d56c1580faaf363802a9d97e
+EBUILD Spiffy-0.460.0.ebuild 581 SHA256 b8b88af2bdaa8ce1a1e9183e19be2b5016087f1589438feb4428a30d1c7402a2 SHA512 3423a71a2b4e4ee0454798f6e44421922c96f993cb2e4f551e5d4d716455cdec11433c25574663b250a2e8496c44612158fc183b3f0d10d912c2d6bf9d071279 WHIRLPOOL a15e5439fd1f7768083d01411f36774b583fa6b49a282c743a6346addd94a1bbfb8adc4067463d687de2d1c52d1702e11c8b05175e8052609a5afe1898b9b55f
+MISC ChangeLog 4380 SHA256 8861075d5c90c747d5e9c95b3739093b36c4ac667e1da61377f42ad339cefc58 SHA512 9b9f19cf0132497b559dbb6df17a7d68821f949bccb5c4840c7eab8ba0bd33fc58eaec3cd7bd81b19ef4ab8958546c14bc4aee8225009828812d32e42a0eca1e WHIRLPOOL d3ec87be7785f6e4bd851b2d7c02de049626e9bbcb1717376f48c3666778d11ef12c775cba8abd2f4529ae6b692854ec781ae62a26407dca68164f99b3b95420
 MISC metadata.xml 394 SHA256 d6b22de5c304e30cfdca8882d2a6609f11b361c1f506036e3f0c7b98b2eb13a2 SHA512 ea72fc6d62b729ab2fd6c292a47b24e7471a9eae3e1516965bdf07d800261f1487bbace8247a383b22ba6eb641387aba23a60bf270218f1002f7317ba2907c71 WHIRLPOOL e04fda52f54f3fae2d33f42962a415493452b09dcf1c29ec5242a6a0066776e0e8c5672e9a8c4fc82362c019d9c4252fbfd1180793e045581c29259590ef3258
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iF4EAREIAAYFAlP3iYgACgkQ2ugaI38ACPDwkwD+Nf8/mep2kGR6nqljDIteOOZN
-3TLAi0LzOI2LQ1dG68wA/3+DgPyrlNN9r48Qy6IYFXN/a6lANnEEIngVMblv+DzD
-=rzCi
+iQJ8BAEBCABmBQJU59F4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcM/4QAK0pA4pE55ckSZfQIBk9ndJ1
+mh5SoeRTKsouHuB4ObKFBu1CTJNsmz/FRBYjLGjt7sFOCaXja1J5pHD1Vf53kzTh
+Z5+8iM2VcjcoD4LmffW2N3p+Ieq42T90mn40y/jDujtMIOpiWrE3PjI8qTajvHOL
+SgankG0ba8mFdlyZBTBu+0FEiJbeJB5siob76sKG7EoWx63QqcC+nQp3sBBFJmKZ
+weINMmJly0yIB4M8o460bqT7t16qScHORwDDQDbB+r1MjXfkKYkOE77V2I2xMwic
+IJLHb0Zw6PzcA/vuiu0fLzpmX/Pu6bcITFE8xT7BiqxpqrKWUFIBQ+nGjg5eN22t
+BDNoWH1fZR3M9GjlLog36nwLNh40NpaxQFkNoH+D+2tfiufm045oBC73b4ifnU9P
+k16Hy0PI28ivRuj4ZDg7tCmeYylzPZEWhHoGnTD+W7JMNnqTMZTlQZVhyVz3g63A
+drRjkgfEfpp9vgDMHSGCvYpG1A1hIJXOpPhN5cVW7jUaOM9oi8Ian9z01LVrokxH
+lRl9f/siIyJ3VMRS0SQUHo25CJlTcIoXm5Bri5vAXDaOIGEAVbWJhwhnR1w+zdTX
+xva50BacR4YiD//zi0PDOc0dsFVJJU8u2EWQNQOcn0WGTzlWQZYgnW3Utqkz0SaW
+ODvxhWmoAXmf4MrKsYAp
+=3LCU
 -----END PGP SIGNATURE-----
