@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Spiffy
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spiffy/ChangeLog,v 1.36 2014/08/22 18:18:44 axs Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spiffy/ChangeLog,v 1.37 2015/02/21 00:29:38 dilfridge Exp $
+
+*Spiffy-0.460.0 (21 Feb 2015)
+
+  21 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  +Spiffy-0.460.0.ebuild:
+  Version bump
 
 *Spiffy-0.310.0-r1 (22 Aug 2014)
 
